<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/eggshell_bg">

    <TextView
        android:id="@+id/signin_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/signin"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/signin_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signin_title"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email" />

    <EditText
        android:id="@+id/signin_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin_email"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:inputType="textPassword"
        android:hint="@string/enter_password" />

    <CheckBox
        android:id="@+id/show_password_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin_password"
        android:layout_alignLeft="@id/signin_password"
        android:text="@string/show_password"/>

    <Button
        android:id="@+id/info_done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_password_box"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@id/signin_password"
        android:layout_alignRight="@id/signin_password"
        android:layout_marginTop="100dp"
        android:text="@string/done"
        android:textColor="#ffffff"
        android:background="@color/colorPrimary"
        style="?android:attr/borderlessButtonStyle"/>


</RelativeLayout>