<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/eggshell_bg" >

    <TextView
        android:id="@+id/choose_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/choose_name_prompt"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/choose_name_spacer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_name_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/text_spacer"
        android:textColor="@color/colorEggshell"/>

    <Spinner
        android:id="@+id/choose_name_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/choose_name_spacer"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@id/choose_name_spacer"
        android:layout_alignRight="@id/choose_name_spacer"
        android:entries="@array/choose_name_array"
        android:prompt="@string/choose_name_prompt">
    </Spinner>

    <TextView
        android:id="@+id/wheres_myname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_name_spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/no_name"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/choose_name_title"
        android:layout_alignRight="@id/choose_name_title"
        android:layout_below="@id/choose_name_spinner"
        android:layout_marginTop="100dp"
        android:text="@string/done"
        android:textColor="#ffffff"
        android:background="@color/colorPrimary"
        style="?android:attr/borderlessButtonStyle"/>


</RelativeLayout>